--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,11 +81,21 @@ jobs:
         run: |
           docker pull $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
       
+      - name: List ECR Images
+        run: |
+          aws ecr describe-images --repository-name ${{ secrets.ECR_REPOSITORY_NAME }}
+
+      
       - name: Delete Previous Container
         run: |
           docker rm -f trip-duration || true
 
       - name: Run Docker Image to serve users
-        run: |
-          docker run -d -p 8080:8080 --ipc="host" --name=trip-duration -e 'AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}' -e 'AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}' -e 'AWS_REGION=${{ secrets.AWS_REGION }}'  ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
-      
+        run:
+          docker run -d -p 8080:8080 --ipc="host" --name=trip-duration \
+          -e 'AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}' \
+          -e 'AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}' \
+          -e 'AWS_REGION=${{ secrets.AWS_REGION }}' \
+          706713633225.dkr.ecr.us-west-2.amazonaws.com/my-ecr:latest
+
+            
