--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,7 +91,7 @@ jobs:
           docker rm -f trip-duration || true
 
       - name: Run Docker Image to serve users
-        run:
+        run: |
           docker run -d -p 8080:8080 --ipc="host" --name=trip-duration \
           -e 'AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}' \
           -e 'AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}' \
